Fix mobile close search modal btn align

--- a/src/assets/styles/cmps/EditStepsMobile.css
+++ b/src/assets/styles/cmps/EditStepsMobile.css
@@ -226,6 +226,10 @@
         width: 8rem;
     }
 
+    .mobile-compact-search .camera-icon {
+        width: auto;
+    }
+
     .preview-image {
         width: 5.5rem;
         height: 5.5rem;
